--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
             </p>
             <input id="Weight" type="number" placeholder="Weight (in KG)" class="p-3 rounded-xl col-span-1 input" />
             <p class="font-bold pl-1 text-xl col-span-1 ">Gender</p>
-            <div class="flex justify-evenly">
-                <div>
+            <div class="flex justify-between md:justify-evenly">
+                <div class="flex flex-col justify-center">
                     <input id="Male" type="radio" name="gender" value="male" class="p-3 rounded-xl col-span-1 input" />
                     <label htmlFor="" class=" font-bold">
                         Male
                     </label>
                 </div>
-                <div>
+                <div class="flex flex-col justify-center">
                     <input id="Female" type="radio" name="gender" value="female"
                         class="p-3 rounded-xl col-span-1 input" />
                     <label htmlFor="" class=" font-bold">
@@ -35,23 +35,36 @@
                 </div>
             </div>
             <p class="font-bold pl-1 text-xl col-span-1 ">Distance</p>
-            <input id="Distance" type="number" placeholder="42.2, 21.1, etc." class="p-3 rounded-xl col-span-1 input" />
-            <p class="font-bold pl-1 text-xl col-span-1 ">
+            <!-- <input id="Distance" type="number" placeholder="42.2, 21.1, etc." class="p-3 rounded-xl col-span-1 input" /> -->
+             <select name="Distance" id="Distance" class="p-3 rounded-xl">
+                <option value="5">5 Km</option>
+                <option value="10">10 Km</option>
+                <option value="21.1">21 Km</option>
+                <option value="42.2">42 Km</option>
+                <option value="50">50 Km</option>
+                <option value="100">100 Km</option>
+                <option value="161">100 Mile</option>
+             </select>
+            <p class="font-bold p-1 text-xl col-span-1 ">
+                Net Elevation Gain
+            </p>
+            <input id="Elevation" type="number" placeholder="In meters" class="p-3 rounded-xl col-span-1 input" />
+             <p class="font-bold pl-1 text-xl col-span-1 ">
                 Estimated Finish Time
             </p>
-            <div class="flex col-span-1 gap-2">
-                <input id="Hours" type="number" placeholder="HH" class="text-center w-[30%] rounded-xl p-3 input" />
-                <input id="Minutes" type="number" placeholder="MM" class="text-center w-[35%] rounded-xl input" />
-                <input id="Seconds" type="number" placeholder="SS" class="text-center w-[35%] rounded-xl input" />
+            <div class="flex col-span-1 gap-2 flex-col md:flex-row">
+                <input id="Hours" type="number" placeholder="HH" class="text-center md:w-[30%] rounded-xl md:p-3 p-1 input" />
+                <input id="Minutes" type="number" placeholder="MM" class="text-center md:w-[35%] rounded-xl p-1 input" />
+                <input id="Seconds" type="number" placeholder="SS" class="text-center md:w-[35%] rounded-xl p-1 input" />
             </div>
         </div>
         <div class="flex justify-center bg-gray-400 pb-5 gap-20 px-24">
-            <button id="Click" class="bg-red-300 w-32 h-10 text-lg font-bold rounded-xl" onClick="calculate()"
+            <button id="Click" class="bg-blue-600 text-white w-32 h-10 text-lg font-mono rounded-xl md:p-0 px-2 text-center" onClick="calculate()"
                 >
-                Calculate!
+                Calculate
             </button>
             <p id="Result" class="text-center font-bold text-2xl underline underline-offset-4">
-                Energy required per hour
+                Energy required per hour    
             </p>
         </div>
     
@@ -59,9 +72,10 @@
     </div>
     <script>
         function calculate(){
-                const male = document.getElementById("Male").checked;
-                const distance =
-                    document.getElementById("Distance").value;
+            const distance =
+            document.getElementById("Distance").value;
+            const male = document.getElementById("Male").checked;
+                const Elevation = document.getElementById("Elevation").value;
                 const weight = document.getElementById("Weight").value;
                 const hours = document.getElementById("Hours").value;
                 const minutes =
@@ -74,9 +88,8 @@
                     parseFloat(minutes) +
                     parseFloat(seconds);
 
-                let CarbEnergyReqd = 0.9 * (weight * distance);
-                let muscleMass = male ? weight * 0.3 : weight * 0.25;
-                let energyStore = muscleMass * 15 * 4;
+                let CarbEnergyReqd = 0.9 * (weight * (Number(distance)+(Elevation/100)));
+                let energyStore = male?weight*24:weight*20;
                 let shortfall = CarbEnergyReqd - energyStore;
                 let hourly = shortfall / time;
 
