--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
 
-    <title>ActivNRG Energgy Calculator</title>
+    <title>ActivNRG Energy Calculator</title>
 </head>
 <body>
     <div>
