--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <div>
         <div class="flex justify-center p-10 items-center gap-10">
             <img src="./logo.jpeg" class="h-24" alt="">
-            <p class="md:text-5xl text-3xl">ActivNRG Energy Calculator</p>
+            <p class="md:text-5xl text-3xl">ActivNRG Race Energy Calculator</p>
         </div>
         <div class="grid grid-cols-2 gap-6 items-center md:px-36 bg-gray-400 p-10">
             <p class="font-bold p-1 text-xl col-span-1 ">
-                Weight in KG
+                Weight (in KG)
             </p>
             <input id="Weight" type="number" placeholder="Weight (in KG)" class="p-3 rounded-xl col-span-1 input" />
             <p class="font-bold pl-1 text-xl col-span-1 ">Gender</p>
