--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <input id="Seconds" type="number" placeholder="SS" class="text-center md:w-[33%] rounded-xl p-1 input" />
             </div>
         </div>
-        <div class="flex justify-center bg-gray-400 pb-5 gap-3 items-center flex-col">
+        <div class="flex justify-center bg-gray-400 pb-5 gap-3 items-center flex-col md:flex-row md:justify-evenly">
             <p id="Result" class="text-center font-bold text-xl text-mono">
                 Energy required per hour    
             </p>
