--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div>
-        <div class="flex justify-center p-10 items-center gap-10">
+        <div class="flex justify-center p-5 items-center gap-10">
             <img src="./logo.jpeg" class="h-24" alt="">
             <p class="md:text-5xl text-3xl">ActivNRG Race Energy Calculator</p>
         </div>
@@ -45,7 +45,7 @@
             </div>
         </div>
         <div class="flex justify-center bg-gray-400 pb-5 gap-3 items-center flex-col md:flex-row md:justify-evenly">
-            <p id="Result" class="text-center font-bold text-xl text-mono">
+            <p id="Result" class="text-center font-mono text-xl text-mono bg-green-500 p-4 rounded-xl">
                 Energy required per hour    
             </p>
             <button id="Click" class="bg-blue-600 text-white w-32 h-10 text-lg font-mono rounded-xl md:p-0 px-2 text-center" onClick="calculate()"
